[tool.poetry]
name = "denzonium-bot-discordpy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
"alexflipnote.py" = "^2.3.0"
"discord.py" = "^1.6.0"
Flask = "^1.1.2"
wikipedia = "^1.4.0"
youtube3 = "^1.2.1"
insta-api = "^0.2.4"
insta = "^1.0.0"
selenium = "^3.141.0"
spotipy = "^2.16.1"
youtube_dl = "^2021.2.22"
giphy_client = "^1.0.0"
meme = "^2.0.0"
slash-command-decorator = "^0.0.3"
discord-py-slash-command = "^1.0.9"
discord-ext-slash = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
